# odrl-infra

./: AGENTS.md  Dockerfile  ODRL.md  README.md  docker-compose.yml  odrl.config  pyproject.toml  quickstart.md  setup.py
.agents/workflows/: vc-ttl.md
.well-known/: did.json
app/: main.py  models.py
app/routers/: croissants.py  dids.py  groups.py  oac.py  variables.py  vcs.py
app/services/: issuer.py  oydid.py  qdrant_service.py
bookmarks/: background.js  content.js  manifest.json  popup.css  popup.html  popup.js
docs/: odrl-cli-guide.md
frontend/: index.html
frontend/src/components/: ResolverLink.jsx
frontend/src/pages/: CroissantsManager.jsx  Dashboard.jsx  Demo.jsx  DidManager.jsx  GroupsManager.jsx  VariablesManager.jsx
tests/: test_rdf_did.py
